test_v3.txt
warning: C:\Users\Star\OneDrive\Documents\Important\Projects\Rust NPM Package\crates\pulsar-server\Cargo.toml: `default-features` is ignored for tracing-subscriber, since `default-features` was not specified for `workspace.dependencies.tracing-subscriber`, this could become a hard error in the future
   Compiling http_server v0.1.0 (C:\Users\Star\OneDrive\Documents\Important\Projects\Rust NPM Package\crates\http-server)
error[E0106]: missing lifetime specifier
  --> crates\http-server\src\lib.rs:48:52
   |
48 | pub type Handler = Arc<dyn Fn(Request) -> BoxFuture<Response> + Send + Sync>;
   |                                                    ^ expected named lifetime parameter
   |
   = help: this function's return type contains a borrowed value, but there is no value for it to be borrowed from
help: consider using the `'static` lifetime, but this is uncommon unless you're returning a borrowed value from a `const` or a `static`, or if you will only have owned values
   |
48 | pub type Handler = Arc<dyn Fn(Request) -> BoxFuture<'static, Response> + Send + Sync>;
   |                                                     ++++++++

warning: unused import: `std::pin::Pin`
 --> crates\http-server\src\lib.rs:6:5
  |
6 | use std::pin::Pin;
  |     ^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `std::future::Future`
 --> crates\http-server\src\lib.rs:7:5
  |
7 | use std::future::Future;
  |     ^^^^^^^^^^^^^^^^^^^

warning: unused import: `debug`
 --> crates\http-server\src\lib.rs:9:34
  |
9 | use tracing::{info, error, warn, debug};
  |                                  ^^^^^

error[E0282]: type annotations needed
   --> crates\http-server\src\lib.rs:275:13
    |
275 |         let m = router.match_route(Method::GET, "/health").await;
    |             ^
276 |         assert!(m.is_some());
    |                 - type must be known at this point
    |
help: consider giving `m` an explicit type
    |
275 |         let m: /* Type */ = router.match_route(Method::GET, "/health").await;
    |              ++++++++++++

error[E0282]: type annotations needed
   --> crates\http-server\src\lib.rs:285:24
    |
285 |             assert_eq!(params.get("id").unwrap(), "123");
    |                        ^^^^^^ cannot infer type

error[E0282]: type annotations needed
   --> crates\http-server\src\lib.rs:296:13
    |
296 |         let m = router.match_route(Method::GET, "/static/images/logo.png").await;
    |             ^
297 |         assert!(m.is_some());
    |                 - type must be known at this point
    |
help: consider giving `m` an explicit type
    |
296 |         let m: /* Type */ = router.match_route(Method::GET, "/static/images/logo.png").await;
    |              ++++++++++++

error[E0282]: type annotations needed
   --> crates\http-server\src\lib.rs:306:24
    |
306 |             assert_eq!(params.get("pid").unwrap(), "ferrum-rocks");
    |                        ^^^^^^ cannot infer type

For more information about this error, try `rustc --explain E0106`.
error[E0282]: type annotations needed
   --> crates\http-server\src\lib.rs:317:13
    |
317 |         let m = router.match_route(Method::GET, "/b").await;
    |             ^
318 |         assert!(m.is_none());
    |                 - type must be known at this point
    |
help: consider giving `m` an explicit type
    |
317 |         let m: /* Type */ = router.match_route(Method::GET, "/b").await;
    |              ++++++++++++

warning: `http_server` (lib) generated 3 warnings
error: could not compile `http_server` (lib) due to 1 previous error; 3 warnings emitted
warning: build failed, waiting for other jobs to finish...
Some errors have detailed explanations: E0106, E0282.
For more information about an error, try `rustc --explain E0106`.
warning: `http_server` (lib test) generated 3 warnings (3 duplicates)
error: could not compile `http_server` (lib test) due to 6 previous errors; 3 warnings emitted
